SET ( RICOCHET_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/graphics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/highscore.h
#    ${CMAKE_CURRENT_SOURCE_DIR}/menu.cpp
#    ${CMAKE_CURRENT_SOURCE_DIR}/menu.h
    ${CMAKE_CURRENT_SOURCE_DIR}/blocks.h
    ${CMAKE_CURRENT_SOURCE_DIR}/resource.h
    ${CMAKE_CURRENT_SOURCE_DIR}/levelparser.h
)
INCLUDE_DIRECTORIES (.)
SUBDIRS(tests editor)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
LINK_LIBRARIES( ${SDL_LIBRARY} )
LINK_LIBRARIES( ${SDLIMAGE_LIBRARY} )
LINK_LIBRARIES( ${SDLTTF_LIBRARY} )
