SET ( RICOCHET_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/blocks.h
    ${CMAKE_CURRENT_SOURCE_DIR}/blocks.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/resource.h
    ${CMAKE_CURRENT_SOURCE_DIR}/resource.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/levelparser.h
    ${CMAKE_CURRENT_SOURCE_DIR}/levelparser.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/level.h
    ${CMAKE_CURRENT_SOURCE_DIR}/level.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/game.h
    ${CMAKE_CURRENT_SOURCE_DIR}/game.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/graphics.h
    ${CMAKE_CURRENT_SOURCE_DIR}/highscore.h
    ${CMAKE_CURRENT_SOURCE_DIR}/textutil.h
    ${CMAKE_CURRENT_SOURCE_DIR}/textutil.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/state.h
    ${CMAKE_CURRENT_SOURCE_DIR}/state.cpp
)

# extended sources
SET ( RICOCHET_X_SRCS
#    ${CMAKE_CURRENT_SOURCE_DIR}/menu.cpp
#    ${CMAKE_CURRENT_SOURCE_DIR}/menu.h
)

INCLUDE_DIRECTORIES (.)
SUBDIRS(tests editor)

FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(SDL_image REQUIRED)
FIND_PACKAGE(SDL_ttf REQUIRED)
LINK_LIBRARIES( ${SDL_LIBRARY} )
LINK_LIBRARIES( ${SDLIMAGE_LIBRARY} )
LINK_LIBRARIES( ${SDLTTF_LIBRARY} )

ADD_EXECUTABLE(ricochet ${RICOCHET_SRCS} ${RICOCHET_X_SRCS} main.cpp)

